Embassy/src/modules/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NEWLINE
    QUOTED_IDENTIFIER

Grammar

Rule 0     S' -> start
Rule 1     start -> SELECT select_statement
Rule 2     start -> UPDATE update_statement
Rule 3     start -> DELETE delete_statement
Rule 4     start -> INSERT insert_statement
Rule 5     start -> USE use_statement
Rule 6     use_statement -> IDENTIFIER
Rule 7     select_statement -> args FROM IDENTIFIER
Rule 8     select_statement -> args FROM IDENTIFIER WHERE where_clause
Rule 9     select_statement -> args FROM IDENTIFIER WHERE where_clause GROUPBY IDENTIFIER ORDERBY order_list
Rule 10    select_statement -> args FROM IDENTIFIER WHERE where_clause GROUPBY IDENTIFIER
Rule 11    select_statement -> args FROM IDENTIFIER WHERE where_clause ORDERBY order_list
Rule 12    select_statement -> args FROM IDENTIFIER GROUPBY IDENTIFIER ORDERBY order_list
Rule 13    select_statement -> args FROM IDENTIFIER ORDERBY order_list
Rule 14    update_statement -> IDENTIFIER SET update_list WHERE where_clause
Rule 15    delete_statement -> FROM IDENTIFIER WHERE where_clause
Rule 16    insert_statement -> INTO IDENTIFIER LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN
Rule 17    args -> STAR
Rule 18    args -> arg_list
Rule 19    where_clause -> term
Rule 20    where_clause -> term OR term
Rule 21    term -> factor
Rule 22    term -> factor AND factor
Rule 23    factor -> condition
Rule 24    factor -> NOT factor
Rule 25    factor -> LPAREN where_clause RPAREN
Rule 26    condition -> IDENTIFIER operators IDENTIFIER
Rule 27    condition -> IDENTIFIER operators NUMBER
Rule 28    update_list -> update_list COMMA update_expression
Rule 29    update_list -> update_expression
Rule 30    column_list -> column_list COMMA IDENTIFIER
Rule 31    column_list -> IDENTIFIER
Rule 32    value_list -> value_list COMMA NUMBER
Rule 33    value_list -> value_list COMMA IDENTIFIER
Rule 34    value_list -> NUMBER
Rule 35    value_list -> IDENTIFIER
Rule 36    update_expression -> IDENTIFIER EQ NUMBER
Rule 37    update_expression -> IDENTIFIER EQ IDENTIFIER
Rule 38    arg_list -> arg_list COMMA IDENTIFIER
Rule 39    arg_list -> IDENTIFIER
Rule 40    order_list -> order_list COMMA IDENTIFIER
Rule 41    order_list -> IDENTIFIER
Rule 42    operators -> EE
Rule 43    operators -> EQ
Rule 44    operators -> NE
Rule 45    operators -> LT
Rule 46    operators -> LE
Rule 47    operators -> GT
Rule 48    operators -> GE

Terminals, with rules where they appear

AND                  : 22
COMMA                : 28 30 32 33 38 40
DELETE               : 3
EE                   : 42
EQ                   : 36 37 43
FROM                 : 7 8 9 10 11 12 13 15
GE                   : 48
GROUPBY              : 9 10 12
GT                   : 47
IDENTIFIER           : 6 7 8 9 9 10 10 11 12 12 13 14 15 16 26 26 27 30 31 33 35 36 37 37 38 39 40 41
INSERT               : 4
INTO                 : 16
LE                   : 46
LPAREN               : 16 16 25
LT                   : 45
NE                   : 44
NEWLINE              : 
NOT                  : 24
NUMBER               : 27 32 34 36
OR                   : 20
ORDERBY              : 9 11 12 13
QUOTED_IDENTIFIER    : 
RPAREN               : 16 16 25
SELECT               : 1
SET                  : 14
STAR                 : 17
UPDATE               : 2
USE                  : 5
VALUES               : 16
WHERE                : 8 9 10 11 14 15
error                : 

Nonterminals, with rules where they appear

arg_list             : 18 38
args                 : 7 8 9 10 11 12 13
column_list          : 16 30
condition            : 23
delete_statement     : 3
factor               : 21 22 22 24
insert_statement     : 4
operators            : 26 27
order_list           : 9 11 12 13 40
select_statement     : 1
start                : 0
term                 : 19 20 20
update_expression    : 28 29
update_list          : 14 28
update_statement     : 2
use_statement        : 5
value_list           : 16 32 33
where_clause         : 8 9 10 11 14 15 25

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . SELECT select_statement
    (2) start -> . UPDATE update_statement
    (3) start -> . DELETE delete_statement
    (4) start -> . INSERT insert_statement
    (5) start -> . USE use_statement

    SELECT          shift and go to state 2
    UPDATE          shift and go to state 3
    DELETE          shift and go to state 4
    INSERT          shift and go to state 5
    USE             shift and go to state 6

    start                          shift and go to state 1

state 1

    (0) S' -> start .



state 2

    (1) start -> SELECT . select_statement
    (7) select_statement -> . args FROM IDENTIFIER
    (8) select_statement -> . args FROM IDENTIFIER WHERE where_clause
    (9) select_statement -> . args FROM IDENTIFIER WHERE where_clause GROUPBY IDENTIFIER ORDERBY order_list
    (10) select_statement -> . args FROM IDENTIFIER WHERE where_clause GROUPBY IDENTIFIER
    (11) select_statement -> . args FROM IDENTIFIER WHERE where_clause ORDERBY order_list
    (12) select_statement -> . args FROM IDENTIFIER GROUPBY IDENTIFIER ORDERBY order_list
    (13) select_statement -> . args FROM IDENTIFIER ORDERBY order_list
    (17) args -> . STAR
    (18) args -> . arg_list
    (38) arg_list -> . arg_list COMMA IDENTIFIER
    (39) arg_list -> . IDENTIFIER

    STAR            shift and go to state 10
    IDENTIFIER      shift and go to state 9

    select_statement               shift and go to state 7
    args                           shift and go to state 8
    arg_list                       shift and go to state 11

state 3

    (2) start -> UPDATE . update_statement
    (14) update_statement -> . IDENTIFIER SET update_list WHERE where_clause

    IDENTIFIER      shift and go to state 13

    update_statement               shift and go to state 12

state 4

    (3) start -> DELETE . delete_statement
    (15) delete_statement -> . FROM IDENTIFIER WHERE where_clause

    FROM            shift and go to state 15

    delete_statement               shift and go to state 14

state 5

    (4) start -> INSERT . insert_statement
    (16) insert_statement -> . INTO IDENTIFIER LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN

    INTO            shift and go to state 17

    insert_statement               shift and go to state 16

state 6

    (5) start -> USE . use_statement
    (6) use_statement -> . IDENTIFIER

    IDENTIFIER      shift and go to state 19

    use_statement                  shift and go to state 18

state 7

    (1) start -> SELECT select_statement .

    $end            reduce using rule 1 (start -> SELECT select_statement .)


state 8

    (7) select_statement -> args . FROM IDENTIFIER
    (8) select_statement -> args . FROM IDENTIFIER WHERE where_clause
    (9) select_statement -> args . FROM IDENTIFIER WHERE where_clause GROUPBY IDENTIFIER ORDERBY order_list
    (10) select_statement -> args . FROM IDENTIFIER WHERE where_clause GROUPBY IDENTIFIER
    (11) select_statement -> args . FROM IDENTIFIER WHERE where_clause ORDERBY order_list
    (12) select_statement -> args . FROM IDENTIFIER GROUPBY IDENTIFIER ORDERBY order_list
    (13) select_statement -> args . FROM IDENTIFIER ORDERBY order_list

    FROM            shift and go to state 20


state 9

    (39) arg_list -> IDENTIFIER .

    COMMA           reduce using rule 39 (arg_list -> IDENTIFIER .)
    FROM            reduce using rule 39 (arg_list -> IDENTIFIER .)


state 10

    (17) args -> STAR .

    FROM            reduce using rule 17 (args -> STAR .)


state 11

    (18) args -> arg_list .
    (38) arg_list -> arg_list . COMMA IDENTIFIER

    FROM            reduce using rule 18 (args -> arg_list .)
    COMMA           shift and go to state 21


state 12

    (2) start -> UPDATE update_statement .

    $end            reduce using rule 2 (start -> UPDATE update_statement .)


state 13

    (14) update_statement -> IDENTIFIER . SET update_list WHERE where_clause

    SET             shift and go to state 22


state 14

    (3) start -> DELETE delete_statement .

    $end            reduce using rule 3 (start -> DELETE delete_statement .)


state 15

    (15) delete_statement -> FROM . IDENTIFIER WHERE where_clause

    IDENTIFIER      shift and go to state 23


state 16

    (4) start -> INSERT insert_statement .

    $end            reduce using rule 4 (start -> INSERT insert_statement .)


state 17

    (16) insert_statement -> INTO . IDENTIFIER LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN

    IDENTIFIER      shift and go to state 24


state 18

    (5) start -> USE use_statement .

    $end            reduce using rule 5 (start -> USE use_statement .)


state 19

    (6) use_statement -> IDENTIFIER .

    $end            reduce using rule 6 (use_statement -> IDENTIFIER .)


state 20

    (7) select_statement -> args FROM . IDENTIFIER
    (8) select_statement -> args FROM . IDENTIFIER WHERE where_clause
    (9) select_statement -> args FROM . IDENTIFIER WHERE where_clause GROUPBY IDENTIFIER ORDERBY order_list
    (10) select_statement -> args FROM . IDENTIFIER WHERE where_clause GROUPBY IDENTIFIER
    (11) select_statement -> args FROM . IDENTIFIER WHERE where_clause ORDERBY order_list
    (12) select_statement -> args FROM . IDENTIFIER GROUPBY IDENTIFIER ORDERBY order_list
    (13) select_statement -> args FROM . IDENTIFIER ORDERBY order_list

    IDENTIFIER      shift and go to state 25


state 21

    (38) arg_list -> arg_list COMMA . IDENTIFIER

    IDENTIFIER      shift and go to state 26


state 22

    (14) update_statement -> IDENTIFIER SET . update_list WHERE where_clause
    (28) update_list -> . update_list COMMA update_expression
    (29) update_list -> . update_expression
    (36) update_expression -> . IDENTIFIER EQ NUMBER
    (37) update_expression -> . IDENTIFIER EQ IDENTIFIER

    IDENTIFIER      shift and go to state 27

    update_list                    shift and go to state 28
    update_expression              shift and go to state 29

state 23

    (15) delete_statement -> FROM IDENTIFIER . WHERE where_clause

    WHERE           shift and go to state 30


state 24

    (16) insert_statement -> INTO IDENTIFIER . LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN

    LPAREN          shift and go to state 31


state 25

    (7) select_statement -> args FROM IDENTIFIER .
    (8) select_statement -> args FROM IDENTIFIER . WHERE where_clause
    (9) select_statement -> args FROM IDENTIFIER . WHERE where_clause GROUPBY IDENTIFIER ORDERBY order_list
    (10) select_statement -> args FROM IDENTIFIER . WHERE where_clause GROUPBY IDENTIFIER
    (11) select_statement -> args FROM IDENTIFIER . WHERE where_clause ORDERBY order_list
    (12) select_statement -> args FROM IDENTIFIER . GROUPBY IDENTIFIER ORDERBY order_list
    (13) select_statement -> args FROM IDENTIFIER . ORDERBY order_list

    $end            reduce using rule 7 (select_statement -> args FROM IDENTIFIER .)
    WHERE           shift and go to state 32
    GROUPBY         shift and go to state 33
    ORDERBY         shift and go to state 34


state 26

    (38) arg_list -> arg_list COMMA IDENTIFIER .

    COMMA           reduce using rule 38 (arg_list -> arg_list COMMA IDENTIFIER .)
    FROM            reduce using rule 38 (arg_list -> arg_list COMMA IDENTIFIER .)


state 27

    (36) update_expression -> IDENTIFIER . EQ NUMBER
    (37) update_expression -> IDENTIFIER . EQ IDENTIFIER

    EQ              shift and go to state 35


state 28

    (14) update_statement -> IDENTIFIER SET update_list . WHERE where_clause
    (28) update_list -> update_list . COMMA update_expression

    WHERE           shift and go to state 36
    COMMA           shift and go to state 37


state 29

    (29) update_list -> update_expression .

    WHERE           reduce using rule 29 (update_list -> update_expression .)
    COMMA           reduce using rule 29 (update_list -> update_expression .)


state 30

    (15) delete_statement -> FROM IDENTIFIER WHERE . where_clause
    (19) where_clause -> . term
    (20) where_clause -> . term OR term
    (21) term -> . factor
    (22) term -> . factor AND factor
    (23) factor -> . condition
    (24) factor -> . NOT factor
    (25) factor -> . LPAREN where_clause RPAREN
    (26) condition -> . IDENTIFIER operators IDENTIFIER
    (27) condition -> . IDENTIFIER operators NUMBER

    NOT             shift and go to state 43
    LPAREN          shift and go to state 44
    IDENTIFIER      shift and go to state 38

    where_clause                   shift and go to state 39
    term                           shift and go to state 40
    factor                         shift and go to state 41
    condition                      shift and go to state 42

state 31

    (16) insert_statement -> INTO IDENTIFIER LPAREN . column_list RPAREN VALUES LPAREN value_list RPAREN
    (30) column_list -> . column_list COMMA IDENTIFIER
    (31) column_list -> . IDENTIFIER

    IDENTIFIER      shift and go to state 45

    column_list                    shift and go to state 46

state 32

    (8) select_statement -> args FROM IDENTIFIER WHERE . where_clause
    (9) select_statement -> args FROM IDENTIFIER WHERE . where_clause GROUPBY IDENTIFIER ORDERBY order_list
    (10) select_statement -> args FROM IDENTIFIER WHERE . where_clause GROUPBY IDENTIFIER
    (11) select_statement -> args FROM IDENTIFIER WHERE . where_clause ORDERBY order_list
    (19) where_clause -> . term
    (20) where_clause -> . term OR term
    (21) term -> . factor
    (22) term -> . factor AND factor
    (23) factor -> . condition
    (24) factor -> . NOT factor
    (25) factor -> . LPAREN where_clause RPAREN
    (26) condition -> . IDENTIFIER operators IDENTIFIER
    (27) condition -> . IDENTIFIER operators NUMBER

    NOT             shift and go to state 43
    LPAREN          shift and go to state 44
    IDENTIFIER      shift and go to state 38

    where_clause                   shift and go to state 47
    term                           shift and go to state 40
    factor                         shift and go to state 41
    condition                      shift and go to state 42

state 33

    (12) select_statement -> args FROM IDENTIFIER GROUPBY . IDENTIFIER ORDERBY order_list

    IDENTIFIER      shift and go to state 48


state 34

    (13) select_statement -> args FROM IDENTIFIER ORDERBY . order_list
    (40) order_list -> . order_list COMMA IDENTIFIER
    (41) order_list -> . IDENTIFIER

    IDENTIFIER      shift and go to state 49

    order_list                     shift and go to state 50

state 35

    (36) update_expression -> IDENTIFIER EQ . NUMBER
    (37) update_expression -> IDENTIFIER EQ . IDENTIFIER

    NUMBER          shift and go to state 52
    IDENTIFIER      shift and go to state 51


state 36

    (14) update_statement -> IDENTIFIER SET update_list WHERE . where_clause
    (19) where_clause -> . term
    (20) where_clause -> . term OR term
    (21) term -> . factor
    (22) term -> . factor AND factor
    (23) factor -> . condition
    (24) factor -> . NOT factor
    (25) factor -> . LPAREN where_clause RPAREN
    (26) condition -> . IDENTIFIER operators IDENTIFIER
    (27) condition -> . IDENTIFIER operators NUMBER

    NOT             shift and go to state 43
    LPAREN          shift and go to state 44
    IDENTIFIER      shift and go to state 38

    where_clause                   shift and go to state 53
    term                           shift and go to state 40
    factor                         shift and go to state 41
    condition                      shift and go to state 42

state 37

    (28) update_list -> update_list COMMA . update_expression
    (36) update_expression -> . IDENTIFIER EQ NUMBER
    (37) update_expression -> . IDENTIFIER EQ IDENTIFIER

    IDENTIFIER      shift and go to state 27

    update_expression              shift and go to state 54

state 38

    (26) condition -> IDENTIFIER . operators IDENTIFIER
    (27) condition -> IDENTIFIER . operators NUMBER
    (42) operators -> . EE
    (43) operators -> . EQ
    (44) operators -> . NE
    (45) operators -> . LT
    (46) operators -> . LE
    (47) operators -> . GT
    (48) operators -> . GE

    EE              shift and go to state 56
    EQ              shift and go to state 57
    NE              shift and go to state 58
    LT              shift and go to state 59
    LE              shift and go to state 60
    GT              shift and go to state 61
    GE              shift and go to state 62

    operators                      shift and go to state 55

state 39

    (15) delete_statement -> FROM IDENTIFIER WHERE where_clause .

    $end            reduce using rule 15 (delete_statement -> FROM IDENTIFIER WHERE where_clause .)


state 40

    (19) where_clause -> term .
    (20) where_clause -> term . OR term

    $end            reduce using rule 19 (where_clause -> term .)
    GROUPBY         reduce using rule 19 (where_clause -> term .)
    ORDERBY         reduce using rule 19 (where_clause -> term .)
    RPAREN          reduce using rule 19 (where_clause -> term .)
    OR              shift and go to state 63


state 41

    (21) term -> factor .
    (22) term -> factor . AND factor

    OR              reduce using rule 21 (term -> factor .)
    $end            reduce using rule 21 (term -> factor .)
    GROUPBY         reduce using rule 21 (term -> factor .)
    ORDERBY         reduce using rule 21 (term -> factor .)
    RPAREN          reduce using rule 21 (term -> factor .)
    AND             shift and go to state 64


state 42

    (23) factor -> condition .

    AND             reduce using rule 23 (factor -> condition .)
    OR              reduce using rule 23 (factor -> condition .)
    $end            reduce using rule 23 (factor -> condition .)
    GROUPBY         reduce using rule 23 (factor -> condition .)
    ORDERBY         reduce using rule 23 (factor -> condition .)
    RPAREN          reduce using rule 23 (factor -> condition .)


state 43

    (24) factor -> NOT . factor
    (23) factor -> . condition
    (24) factor -> . NOT factor
    (25) factor -> . LPAREN where_clause RPAREN
    (26) condition -> . IDENTIFIER operators IDENTIFIER
    (27) condition -> . IDENTIFIER operators NUMBER

    NOT             shift and go to state 43
    LPAREN          shift and go to state 44
    IDENTIFIER      shift and go to state 38

    factor                         shift and go to state 65
    condition                      shift and go to state 42

state 44

    (25) factor -> LPAREN . where_clause RPAREN
    (19) where_clause -> . term
    (20) where_clause -> . term OR term
    (21) term -> . factor
    (22) term -> . factor AND factor
    (23) factor -> . condition
    (24) factor -> . NOT factor
    (25) factor -> . LPAREN where_clause RPAREN
    (26) condition -> . IDENTIFIER operators IDENTIFIER
    (27) condition -> . IDENTIFIER operators NUMBER

    NOT             shift and go to state 43
    LPAREN          shift and go to state 44
    IDENTIFIER      shift and go to state 38

    where_clause                   shift and go to state 66
    term                           shift and go to state 40
    factor                         shift and go to state 41
    condition                      shift and go to state 42

state 45

    (31) column_list -> IDENTIFIER .

    RPAREN          reduce using rule 31 (column_list -> IDENTIFIER .)
    COMMA           reduce using rule 31 (column_list -> IDENTIFIER .)


state 46

    (16) insert_statement -> INTO IDENTIFIER LPAREN column_list . RPAREN VALUES LPAREN value_list RPAREN
    (30) column_list -> column_list . COMMA IDENTIFIER

    RPAREN          shift and go to state 67
    COMMA           shift and go to state 68


state 47

    (8) select_statement -> args FROM IDENTIFIER WHERE where_clause .
    (9) select_statement -> args FROM IDENTIFIER WHERE where_clause . GROUPBY IDENTIFIER ORDERBY order_list
    (10) select_statement -> args FROM IDENTIFIER WHERE where_clause . GROUPBY IDENTIFIER
    (11) select_statement -> args FROM IDENTIFIER WHERE where_clause . ORDERBY order_list

    $end            reduce using rule 8 (select_statement -> args FROM IDENTIFIER WHERE where_clause .)
    GROUPBY         shift and go to state 69
    ORDERBY         shift and go to state 70


state 48

    (12) select_statement -> args FROM IDENTIFIER GROUPBY IDENTIFIER . ORDERBY order_list

    ORDERBY         shift and go to state 71


state 49

    (41) order_list -> IDENTIFIER .

    COMMA           reduce using rule 41 (order_list -> IDENTIFIER .)
    $end            reduce using rule 41 (order_list -> IDENTIFIER .)


state 50

    (13) select_statement -> args FROM IDENTIFIER ORDERBY order_list .
    (40) order_list -> order_list . COMMA IDENTIFIER

    $end            reduce using rule 13 (select_statement -> args FROM IDENTIFIER ORDERBY order_list .)
    COMMA           shift and go to state 72


state 51

    (37) update_expression -> IDENTIFIER EQ IDENTIFIER .

    WHERE           reduce using rule 37 (update_expression -> IDENTIFIER EQ IDENTIFIER .)
    COMMA           reduce using rule 37 (update_expression -> IDENTIFIER EQ IDENTIFIER .)


state 52

    (36) update_expression -> IDENTIFIER EQ NUMBER .

    WHERE           reduce using rule 36 (update_expression -> IDENTIFIER EQ NUMBER .)
    COMMA           reduce using rule 36 (update_expression -> IDENTIFIER EQ NUMBER .)


state 53

    (14) update_statement -> IDENTIFIER SET update_list WHERE where_clause .

    $end            reduce using rule 14 (update_statement -> IDENTIFIER SET update_list WHERE where_clause .)


state 54

    (28) update_list -> update_list COMMA update_expression .

    WHERE           reduce using rule 28 (update_list -> update_list COMMA update_expression .)
    COMMA           reduce using rule 28 (update_list -> update_list COMMA update_expression .)


state 55

    (26) condition -> IDENTIFIER operators . IDENTIFIER
    (27) condition -> IDENTIFIER operators . NUMBER

    IDENTIFIER      shift and go to state 73
    NUMBER          shift and go to state 74


state 56

    (42) operators -> EE .

    IDENTIFIER      reduce using rule 42 (operators -> EE .)
    NUMBER          reduce using rule 42 (operators -> EE .)


state 57

    (43) operators -> EQ .

    IDENTIFIER      reduce using rule 43 (operators -> EQ .)
    NUMBER          reduce using rule 43 (operators -> EQ .)


state 58

    (44) operators -> NE .

    IDENTIFIER      reduce using rule 44 (operators -> NE .)
    NUMBER          reduce using rule 44 (operators -> NE .)


state 59

    (45) operators -> LT .

    IDENTIFIER      reduce using rule 45 (operators -> LT .)
    NUMBER          reduce using rule 45 (operators -> LT .)


state 60

    (46) operators -> LE .

    IDENTIFIER      reduce using rule 46 (operators -> LE .)
    NUMBER          reduce using rule 46 (operators -> LE .)


state 61

    (47) operators -> GT .

    IDENTIFIER      reduce using rule 47 (operators -> GT .)
    NUMBER          reduce using rule 47 (operators -> GT .)


state 62

    (48) operators -> GE .

    IDENTIFIER      reduce using rule 48 (operators -> GE .)
    NUMBER          reduce using rule 48 (operators -> GE .)


state 63

    (20) where_clause -> term OR . term
    (21) term -> . factor
    (22) term -> . factor AND factor
    (23) factor -> . condition
    (24) factor -> . NOT factor
    (25) factor -> . LPAREN where_clause RPAREN
    (26) condition -> . IDENTIFIER operators IDENTIFIER
    (27) condition -> . IDENTIFIER operators NUMBER

    NOT             shift and go to state 43
    LPAREN          shift and go to state 44
    IDENTIFIER      shift and go to state 38

    term                           shift and go to state 75
    factor                         shift and go to state 41
    condition                      shift and go to state 42

state 64

    (22) term -> factor AND . factor
    (23) factor -> . condition
    (24) factor -> . NOT factor
    (25) factor -> . LPAREN where_clause RPAREN
    (26) condition -> . IDENTIFIER operators IDENTIFIER
    (27) condition -> . IDENTIFIER operators NUMBER

    NOT             shift and go to state 43
    LPAREN          shift and go to state 44
    IDENTIFIER      shift and go to state 38

    factor                         shift and go to state 76
    condition                      shift and go to state 42

state 65

    (24) factor -> NOT factor .

    AND             reduce using rule 24 (factor -> NOT factor .)
    OR              reduce using rule 24 (factor -> NOT factor .)
    $end            reduce using rule 24 (factor -> NOT factor .)
    GROUPBY         reduce using rule 24 (factor -> NOT factor .)
    ORDERBY         reduce using rule 24 (factor -> NOT factor .)
    RPAREN          reduce using rule 24 (factor -> NOT factor .)


state 66

    (25) factor -> LPAREN where_clause . RPAREN

    RPAREN          shift and go to state 77


state 67

    (16) insert_statement -> INTO IDENTIFIER LPAREN column_list RPAREN . VALUES LPAREN value_list RPAREN

    VALUES          shift and go to state 78


state 68

    (30) column_list -> column_list COMMA . IDENTIFIER

    IDENTIFIER      shift and go to state 79


state 69

    (9) select_statement -> args FROM IDENTIFIER WHERE where_clause GROUPBY . IDENTIFIER ORDERBY order_list
    (10) select_statement -> args FROM IDENTIFIER WHERE where_clause GROUPBY . IDENTIFIER

    IDENTIFIER      shift and go to state 80


state 70

    (11) select_statement -> args FROM IDENTIFIER WHERE where_clause ORDERBY . order_list
    (40) order_list -> . order_list COMMA IDENTIFIER
    (41) order_list -> . IDENTIFIER

    IDENTIFIER      shift and go to state 49

    order_list                     shift and go to state 81

state 71

    (12) select_statement -> args FROM IDENTIFIER GROUPBY IDENTIFIER ORDERBY . order_list
    (40) order_list -> . order_list COMMA IDENTIFIER
    (41) order_list -> . IDENTIFIER

    IDENTIFIER      shift and go to state 49

    order_list                     shift and go to state 82

state 72

    (40) order_list -> order_list COMMA . IDENTIFIER

    IDENTIFIER      shift and go to state 83


state 73

    (26) condition -> IDENTIFIER operators IDENTIFIER .

    AND             reduce using rule 26 (condition -> IDENTIFIER operators IDENTIFIER .)
    OR              reduce using rule 26 (condition -> IDENTIFIER operators IDENTIFIER .)
    $end            reduce using rule 26 (condition -> IDENTIFIER operators IDENTIFIER .)
    GROUPBY         reduce using rule 26 (condition -> IDENTIFIER operators IDENTIFIER .)
    ORDERBY         reduce using rule 26 (condition -> IDENTIFIER operators IDENTIFIER .)
    RPAREN          reduce using rule 26 (condition -> IDENTIFIER operators IDENTIFIER .)


state 74

    (27) condition -> IDENTIFIER operators NUMBER .

    AND             reduce using rule 27 (condition -> IDENTIFIER operators NUMBER .)
    OR              reduce using rule 27 (condition -> IDENTIFIER operators NUMBER .)
    $end            reduce using rule 27 (condition -> IDENTIFIER operators NUMBER .)
    GROUPBY         reduce using rule 27 (condition -> IDENTIFIER operators NUMBER .)
    ORDERBY         reduce using rule 27 (condition -> IDENTIFIER operators NUMBER .)
    RPAREN          reduce using rule 27 (condition -> IDENTIFIER operators NUMBER .)


state 75

    (20) where_clause -> term OR term .

    $end            reduce using rule 20 (where_clause -> term OR term .)
    GROUPBY         reduce using rule 20 (where_clause -> term OR term .)
    ORDERBY         reduce using rule 20 (where_clause -> term OR term .)
    RPAREN          reduce using rule 20 (where_clause -> term OR term .)


state 76

    (22) term -> factor AND factor .

    OR              reduce using rule 22 (term -> factor AND factor .)
    $end            reduce using rule 22 (term -> factor AND factor .)
    GROUPBY         reduce using rule 22 (term -> factor AND factor .)
    ORDERBY         reduce using rule 22 (term -> factor AND factor .)
    RPAREN          reduce using rule 22 (term -> factor AND factor .)


state 77

    (25) factor -> LPAREN where_clause RPAREN .

    AND             reduce using rule 25 (factor -> LPAREN where_clause RPAREN .)
    OR              reduce using rule 25 (factor -> LPAREN where_clause RPAREN .)
    $end            reduce using rule 25 (factor -> LPAREN where_clause RPAREN .)
    GROUPBY         reduce using rule 25 (factor -> LPAREN where_clause RPAREN .)
    ORDERBY         reduce using rule 25 (factor -> LPAREN where_clause RPAREN .)
    RPAREN          reduce using rule 25 (factor -> LPAREN where_clause RPAREN .)


state 78

    (16) insert_statement -> INTO IDENTIFIER LPAREN column_list RPAREN VALUES . LPAREN value_list RPAREN

    LPAREN          shift and go to state 84


state 79

    (30) column_list -> column_list COMMA IDENTIFIER .

    RPAREN          reduce using rule 30 (column_list -> column_list COMMA IDENTIFIER .)
    COMMA           reduce using rule 30 (column_list -> column_list COMMA IDENTIFIER .)


state 80

    (9) select_statement -> args FROM IDENTIFIER WHERE where_clause GROUPBY IDENTIFIER . ORDERBY order_list
    (10) select_statement -> args FROM IDENTIFIER WHERE where_clause GROUPBY IDENTIFIER .

    ORDERBY         shift and go to state 85
    $end            reduce using rule 10 (select_statement -> args FROM IDENTIFIER WHERE where_clause GROUPBY IDENTIFIER .)


state 81

    (11) select_statement -> args FROM IDENTIFIER WHERE where_clause ORDERBY order_list .
    (40) order_list -> order_list . COMMA IDENTIFIER

    $end            reduce using rule 11 (select_statement -> args FROM IDENTIFIER WHERE where_clause ORDERBY order_list .)
    COMMA           shift and go to state 72


state 82
